syntax = "proto3";

package grpc_build.request.helloworld;

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}
