syntax = "proto3";

package grpc_build.response.helloworld;

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
